--- a/FA5_Yan/style.css
+++ b/FA5_Yan/style.css
@@ -10,11 +10,11 @@ header {
 	background-color: #D3D3D3;
 }
 
-h1 {
+header h1 {
 	margin-top: 0;
 }
 
-h2 {
+header h2 {
 	font-style: italic;
 }
 
@@ -24,5 +24,6 @@ article p {
 
 footer {
 	background-color: #D3D3D3;
-	padding: 0px;
+	margin-top: -13px;
+	margin-bottom: -13px;
 }
